terraform/s3-static-website/6-igw.tf
########## internet gateway ##########
resource "aws_internet_gateway" "resume_gw" {
    vpc_id = aws_vpc.resume_vpc.id
}
